--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,9 @@
 AC_INIT([serialist], [1.0], [bug-report@address])
+AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_11
+AX_BOOST_BASE([1.49])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile serialist/Makefile])
 AC_OUTPUT
