--- a/serialist/Makefile.am
+++ b/serialist/Makefile.am
@@ -1,2 +1,3 @@
 bin_PROGRAMS = serialist
 serialist_SOURCES = main.cpp DataStructures.cpp Parser.cpp Scanner.cpp CBackend.cpp
+AM_CXXFLAGS = $(BOOST_CPPFLAGS)
