--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: cpp
 compiler:
   - gcc
   - clang
-  
+
+before_install:
+  - sudo apt-get install libboost-dev
+
 #TODO need to add tests
 script: ./configure && make
