remove useless calls to aptget

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ compiler:
   - gcc
 
 before_install:
-  - sudo apt-get install autotools-dev libboost-dev
-  - sudo apt-get install autoconf automake libtool
+  - sudo apt-get install libboost-dev
 
 script: autoreconf --install --force  && ./configure && make && make check
