make generated code actually compile, and add a test for that

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,1 +1,13 @@
-TESTS = test1.sh test2.sh test3.sh
+TESTS = test1.sh test2.sh test3.sh test4
+
+check_PROGRAMS = test4
+
+test4_SOURCES = test4.cpp test.cpp
+BUILT_SOURCES = test.cpp
+
+CLEANFILES = $(BUILT_SOURCES)
+
+test.cpp : test.format
+	../serialist/serialist h test.format > test.h
+	../serialist/serialist c test.format > test.cpp
+	
