--- a/serialist/serialist.vcxproj
+++ b/serialist/serialist.vcxproj
@@ -49,7 +49,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Tools\boost_1_53_0\boost_1_53_0\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)boost;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zm213 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -97,9 +97,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="serialist.atg" />
-    <None Include="test.format">
-      <DeploymentContent>true</DeploymentContent>
-    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
