make travis upgrade g++ to 4.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: cpp
+
 compiler:
   - gcc
   - clang
 
-script: autoreconf --install --force  && ./configure && make && make check
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -qq
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+
+before_script:
+  - autoreconf --install --force
+
+script: ./configure && make && make check
