--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
 rvm:
   - 2.0.0
-before_install: gem install bundler -v 1.10.2
+before_install: 
+  - gem install bundler -v 1.10.2
+  - sh build.sh
