--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,14 @@ before_install:
   - sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
   - gcc --version
   - gem install bundler
+  - if [ $TRAVIS_OS_NAME == "linux" ]; then
+      export CC="gcc-5";
+      export CXX="g++-5";
+      export LINK="gcc-5";
+      export LINKXX="g++-5";
+    fi
+  - gcc --version
+  - g++ --version
 
 install:
   - bundle install
